objects/PSS_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>LegacyId__c</fullName>
        <label>LegacyId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumUsers__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This filed will be an input for the number of users the customer has/is planing to deploy in their PureCloud instance</description>
        <label>NumUsers</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>PSS Oportunities</relationshipLabel>
        <relationshipName>PSS_Oportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSS_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The PSS package associated with this opportunity/quote.  The package is recommended based on the customer needs identified in the PSS survey.</description>
        <label>PSS Package</label>
        <referenceTo>PSS_Package__c</referenceTo>
        <relationshipLabel>PSS Oportunities</relationshipLabel>
        <relationshipName>PSS_Oportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seats__c</fullName>
        <formula>Opportunity__r.Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solution_Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution Design</label>
        <referenceTo>Solution_Design__c</referenceTo>
        <relationshipLabel>PSS Oportunities</relationshipLabel>
        <relationshipName>PSS_Oportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>PSS Opportunity</label>
    <nameField>
        <label>PSS Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PSS Oportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>